avoiding list to overflow

--- a/styles/content.css
+++ b/styles/content.css
@@ -75,10 +75,18 @@
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
+    max-height: 31rem;
+
+    overflow: scroll;
+    position: relative;
+
+    &::-webkit-scrollbar {
+      width: 0;
+    }
 
     .item {
       height: 57px;
-
+      min-height: 57px;
       display: flex;
       align-items: center;
       gap: 0.75rem;
